Quorum/Library/Tests/TypeChecker/Pass/ExpAssignTextObjObject.quorum
class Main
    action Main
        Text t
        Object o
        Text txt
        t:SetValue("text")
        o = cast(Object, t)
        txt = cast(Text, o)
        if txt:GetValue() = "text"
            output "passed"
        end
    end
end
