Quorum/Library/Tests/TypeChecker/Fail/ExpAssignBoolObjTextObj.quorum
class main
    action Main
        Text t
        Boolean bool
        t:SetValue("text")
        bool = cast(Boolean, t)
    end
end